# roastmaster

./: .gitignore  PLAN.md  code_review.md  pyproject.toml
assets/: ARS-TITLE.xcf
deploy/: conar255.service  setup-pi.sh  start-x.sh
docs/: gpio-breadboard-wiring.md  hardware-build.md  kaleido-comm-dev-tasks.md  kaleido-protocol.md  stripboard-interface-board-inputs-only-27x34.md  stripboard-interface-board-inputs-only-compact.md  stripboard-interface-board-inputs-only.md  stripboard-interface-board.md  stripboard-layout.html
profiles/: untitled.json
scripts/: run_dev.sh
src/roastmaster/: __init__.py  __main__.py  app.py  config.py  sfx.py
src/roastmaster/display/: fonts.py  renderer.py  theme.py  units.py  widgets.py
src/roastmaster/engine/: events.py  pid.py  roast.py  ror.py
src/roastmaster/hal/: __init__.py  base.py  gpio.py  hybrid.py  keyboard.py
src/roastmaster/profiles/: manager.py  schema.py
src/roastmaster/serial/: kaleido.py  protocol.py
src/roastmaster/sim/: device_adapter.py  input_sim.py  roaster_sim.py
tests/: conftest.py  test_e2e.py  test_smoke.py
tests/test_display/: test_display.py  test_units.py
tests/test_engine/: test_events.py  test_integration.py  test_roast.py  test_ror.py
tests/test_hal/: test_gpio.py  test_keyboard.py
tests/test_profiles/: test_profiles.py
tests/test_serial/: test_kaleido.py  test_protocol.py  test_roaster_sim.py
tools/: test_serial.py
